Add three buttons in index.html so player can choose what he plays by clicking a button. Delete game function, because for now when player clicks button it calls for a playRound function and displayes in console who won.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
 
 <body>
     <h1>Rock Paper Scissors-Simple Game</h1>
+
+
+    <div class="container">
+        <button class="btn rock" value="rock">Rock</button>
+        <button class="btn paper" value="paper">Paper</button>
+        <button class="btn scissors" value="scissors">Scissors</button>
+    </div>
 </body>
+
+
+
+
+
+
+
 <script src="./script.js"></script>
 
 </html>
