Change all my console.log's  into DOM methods. Add display points for each player on a page, when player or computer reaches 5 points, the winner will be displayed and all the button will be disabled. Add 'Play Again' button which after clicking resets everything and game starts as new.

--- a/index.html
+++ b/index.html
@@ -9,14 +9,22 @@
 </head>
 
 <body>
-    <h1>Rock Paper Scissors-Simple Game</h1>
+    <div class="content">
+        <h1>Rock Paper Scissors-Simple Game</h1>
+        <div class="container">
+            <button class="btn rock" value="rock">Rock</button>
+            <button class="btn paper" value="paper">Paper</button>
+            <button class="btn scissors" value="scissors">Scissors</button>
+        </div>
+        <div class="score-container">
+            <h4>Player score: <span class="player-score"></span> </h4>
 
-
-    <div class="container">
-        <button class="btn rock" value="rock">Rock</button>
-        <button class="btn paper" value="paper">Paper</button>
-        <button class="btn scissors" value="scissors">Scissors</button>
+            <h4>Computer score: <span class="computer-score"></span> </h4>
+        </div>
+        <h3>Winner: <span class="winner"></span></h3>
+        <button class="btn-again">Play Again</button>
     </div>
+
 </body>
 
 
