Add style for button, texts

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="content">
-        <h1>Rock Paper Scissors-Simple Game</h1>
+        <h1 class="main-title">Rock Paper Scissors-Simple Game</h1>
         <div class="container">
             <button class="btn rock" value="rock">Rock</button>
             <button class="btn paper" value="paper">Paper</button>
@@ -22,7 +22,7 @@
 
             <h4>Computer score: <span class="computer-score"></span> </h4>
         </div>
-        <h3>Winner: <span class="winner"></span></h3>
+        <h3 class="winner"><span class="winner"></span></h3>
         <button class="btn-again">Play Again</button>
     </div>
 
